Exc5/admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-admin-frontend-to-admin-backend
    namespace: default
spec:
    podSelector:
        matchLabels:
            role: admin-back-end-api
    policyTypes:
        - Ingress
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        role: admin-front-end
