Exc5/app-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-frontend-to-backend
    namespace: default
spec:
    podSelector:
        matchLabels:
            role: back-end-api
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
              - podSelector:
                    matchLabels:
                        role: front-end
    egress:
        - to:
              - podSelector:
                    matchLabels:
                        role: front-end
